--- a/package.json
+++ b/package.json
@@ -11,17 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-crypto/sha256-browser": "^2.0.1",
     "@aws-sdk/client-rekognition": "^3.105.0",
     "@aws-sdk/client-s3": "^3.107.0",
-    "@aws-sdk/hash-node": "^3.78.0",
-    "@aws-sdk/protocol-http": "^3.78.0",
     "@aws-sdk/s3-request-presigner": "^3.107.0",
-    "@aws-sdk/url-parser": "^3.78.0",
-    "aws-sdk": "^2.1151.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "multer": "^1.4.5-lts.1",
-    "multiparty": "^4.2.3"
+    "multer": "^1.4.5-lts.1"
   }
 }
